--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -21,7 +21,7 @@
   padding: 0;
   position: fixed;
   text-align: center;
-  top: 92px;
+  top: 0px;
   width: 100vw;
 }
 
